@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <netty.version>4.0.23.Final</netty.version>
         <logback.version>1.1.2</logback.version>
         <slf4j.version>1.7.7</slf4j.version>
@@ -154,7 +156,6 @@
                         <argument>-d64</argument>
                         <argument>-Xms512m</argument>
                         <argument>-Xmx512m</argument>
-                        <argument>-XX:MaxPermSize=512m</argument>
                         <argument>-XX:ReservedCodeCacheSize=256m</argument>
                         <argument>-XX:+UseG1GC</argument>
                         <argument>-XX:MaxGCPauseMillis=150</argument>
